; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_tl_memcache.c_do_memcache_send_get.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_tl_memcache.c_do_memcache_send_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_connection = type { i32 }
%struct.rpc_query = type { i64 }

@MEMCACHE_GET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @do_memcache_send_get(%struct.rpc_connection* %0, i8* %1, i32 %2, double %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.rpc_connection*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca double, align 8
  %10 = alloca %struct.rpc_query*, align 8
  store %struct.rpc_connection* %0, %struct.rpc_connection** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store double %3, double* %9, align 8
  %11 = call i32 (...) @do_rpc_clean()
  %12 = load i32, i32* @MEMCACHE_GET, align 4
  %13 = call i32 @do_rpc_store_int(i32 %12)
  %14 = load i8*, i8** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @do_rpc_store_string(i8* %14, i32 %15)
  %17 = load %struct.rpc_connection*, %struct.rpc_connection** %6, align 8
  %18 = load double, double* %9, align 8
  %19 = call %struct.rpc_query* @do_rpc_send_noflush(%struct.rpc_connection* %17, double %18)
  store %struct.rpc_query* %19, %struct.rpc_query** %10, align 8
  %20 = icmp ne %struct.rpc_query* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %4
  store i64 -1, i64* %5, align 8
  br label %26

22:                                               ; preds = %4
  %23 = load %struct.rpc_query*, %struct.rpc_query** %10, align 8
  %24 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  store i64 %25, i64* %5, align 8
  br label %26

26:                                               ; preds = %22, %21
  %27 = load i64, i64* %5, align 8
  ret i64 %27
}

declare dso_local i32 @do_rpc_clean(...) #1

declare dso_local i32 @do_rpc_store_int(i32) #1

declare dso_local i32 @do_rpc_store_string(i8*, i32) #1

declare dso_local %struct.rpc_query* @do_rpc_send_noflush(%struct.rpc_connection*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
